<resources>
    <string name="app_name">移动办公</string>

    <!-- 通用 -->
    <string name="countdown_code_send_succeed">验证码已发送，请注意查收</string>
    <string name="two_password_input_error">两次密码输入不一致，请重新输入</string>
    <string name="phone_input_error">手机号输入不正确</string>

    <!-- 主页 -->
    <string name="home_exit_hint">再按一次退出</string>
    <string name="home_nav_index">首页</string>
    <string name="home_nav_workbench">工作台</string>
    <string name="home_nav_contacts">通讯录</string>
    <string name="home_nav_message">消息</string>
    <string name="home_nav_me">我的</string>
    <string name="home_nav_found">发现</string>
    <!-- 登录 -->
    <string name="login_register">注册</string>
    <string name="login_phone_input_hint">请输入手机号</string>
    <string name="login_password_input_hint">请输入密码</string>
    <string name="login_forget">忘记密码？</string>
    <string name="login_text">登录</string>

    <!-- 注册 -->
    <string name="register_text">注册</string>
    <string name="register_hint">手机号仅用于登录和保护账号安全</string>
    <string name="register_login">登录</string>
    <string name="register_phone_input_hint">输入手机号码</string>
    <string name="register_code_input_hint">输入验证码</string>
    <string name="register_send_code">发送验证码</string>
    <string name="register_password_input_hint1">设置密码</string>
    <string name="register_password_input_hint2">再次输入密码</string>

    <!-- 关于 -->
    <string name="about_text">关于我们</string>
    <string name="about_copyright">Copyright © 2018</string>

    <string name="update_app_title">版本更新</string>
    <string name="update_app_confirm">确定</string>
    <string name="update_app_updateNow">立即更新</string>
    <string name="update_app_tlaterSay">稍后再说</string>
    <string name="update_app_ignorable">忽略</string>

    <string name="up_for_cancel">手指上滑，取消发送</string>
    <string name="want_to_cancle">松开手指，取消发送</string>
    <string name="time_too_short">录音时间过短</string>

    <string name="long_click_record">长按 录音</string>
    <string name="hang_up_finsh">松开 结束</string>
    <string name="release_cancel">松开 取消</string>


    <string name="emailaddress">请输入邮件地址</string>
    <string name="emailpassword">请输入密码</string>
    <string name="emaillogin">登入</string>
    <string name="remenberPassword">记住密码</string>
    <string name="autoLogin">自动登入</string>
    <string name="tv_title">Email</string>
    <string name="tv_online">所有组</string>
    <string name="back">返回</string>
    <string name="writer">新邮件</string>
    <string name="send">发送</string>
    <string name="tv_t">收件人:</string>
    <string name="tv_f">发件人:</string>
    <string name="tv_zhuti">主题:</string>
    <string name="acctchment">附件</string>
    <string name="content">正  文</string>
    <string name="tv_new">新</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_relay">回复/转发</string>
    <string name="mail_box">收件箱</string>
    <string name="mail_content">邮件</string>
    <string name="btn_replay">回复</string>
    <string name="constant">联系人</string>
    <string name="choose">确定</string>
    <string name="caogaoxiang">草稿箱</string>
</resources>