<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<item-->
        <!--android:id="@+id/home_message"-->
        <!--android:icon="@drawable/ic_selector_selectable_home_message"-->
        <!--android:title="@string/home_nav_message"/>-->

    <item
        android:id="@+id/home_workbench"
        android:icon="@drawable/ic_selector_selectable_home_workbench"
        android:title="@string/home_nav_workbench"/>

    <item
        android:id="@+id/home_index"
        android:icon="@drawable/ic_selector_selectable_home_index"
        android:title="@string/home_nav_index"/>

    <item
        android:id="@+id/home_contacts"
        android:icon="@drawable/ic_selector_selectable_home_contacts"
        android:title="@string/home_nav_contacts"/>
    <item
        android:id="@+id/home_me"
        android:icon="@drawable/ic_selector_selectable_home_me"
        android:title="@string/home_nav_me"/>

</menu>